--- a/css/main.css
+++ b/css/main.css
@@ -47,14 +47,14 @@ canvas {
 thank you w3schools :)
 */
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #999;
+  color: #bbb;
   opacity: 1; /* Firefox */
 }
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: #999;
+  color: #bbb;
 }
 ::-ms-input-placeholder { /* Microsoft Edge */
-  color: #999;
+  color: #bbb;
 }
 
 button, input {
